css/style.css
body {
    font-family: sans-serif;
    font-size: 12px;
}

.modal-content, #viewer2d, #viewer3d{
    background-color: white;
}

input {
    display: inline-block;
    font-family: sans-serif;
    font-size: 12px;
}

output {
    display: inline-block;
    font-size: 11px;
    font-weight: bold;
    color: red;
}
/* centered columns styles */

.row-centered {
    text-align: center;
}

.col-centered {
    display: inline-block;
    float: none;
    /* reset the text-align */
    text-align: left;
    /* inline-block space fix */
    margin-right: -4px;
}

.vertical-center {
    min-height: 100%;
    /* Fallback for browsers do NOT support vh unit */
    min-height: 100vh;
    /* These two lines are counted as one           */
    display: flex;
    align-items: center;
}

.footer {
    width: 95%;
    height: 20px;
    position: absolute;
    bottom: 10px;
    left: 10px;
}

.credit {
    margin-left: 1em;
    margin-bottom: .5em;
}

.fullscreen {
    top: 0;
    left: 0;
    height: 100% !important;
    width: 100% !important;
    position: fixed !important;
    z-index: 1001 !important;
    overflow: auto;
}

#thumbnails-btm .col-xs-1:before,
#thumbnails-btm .col-xs-3:before {
    content: "";
    display: block;
    margin-top: 100%;
}

#thumbnails-btm .col-xs-1,
#thumbnails-btm .col-xs-3 {
    padding: 0px;
    -ms-transform: scale(0.9, 0.9); /* IE 9 */
    -webkit-transform: scale(0.9, 0.9); /* Safari */
    transform: scale(0.9, 0.9);
}


#thumbnails-btm img {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    border: .5em solid;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    position: absolute;
    overflow: hidden;
    background-image: url(../img/thorntontomasetti.jpg);
    background-size: contain;
}


#zoomed img,
#zoomedArea img {
    height: 100%;
    width: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
    min-width: 300px;
    background-image: url(../img/thorntontomasetti.jpg);
    background-size: contain;
}
div#thumbnails-btm_container.onRight, 
div#thumbnails-btm_container.rightChartFullScreenToggled
{
    position: absolute;
    right: 0;
    width: 25%;

    -webkit-transition: all 0.2s ease;
    -moz-transition: all 0.2s ease;
    -o-transition: all 0.2s ease;
    transition: all 0.2s ease;
    
}
div#thumbnails-btm_container.onRight,
div#thumbnails-btm_container.onRight #thumbnails-btm div, 
div#thumbnails-btm_container.rightChartFullScreenToggled #thumbnails-btm div
{
    width: 25%;
}

div#thumbnails-btm.col-lg-12{
    margin-top: 20px;
    overflow: auto;
    /* Firefox */
    height: -moz-calc(100% - 50px);
    /* WebKit */
    height: -webkit-calc(100% - 50px);
    /* Opera */
    height: -o-calc(100% - 50px);
    /* Standard */
    height: calc(100% - 50px);
}

#thumbnails-btm_container,
#zoomedArea {
    overflow: hidden;
    margin-top: 10px;
    min-height: 0;

}

#legend {
    overflow-y: auto;
    overflow-x: hidden;
}

rect.disabled {
    fill: transparent !important;
}

.navbar-default {
    height: 50px;
    /* overwrite default navbar size */
}

.Spectacles_Footer {
    visibility: hidden;
}

.sampleImage {
    width: 100%;
    cursor: pointer;
}

.sampleImage:hover img {
    border-color: black;
    border-width: .2em solid;
}


.file-upload {
    position: relative;
    overflow: hidden;
    height: 2.2em;
    border-width: 0px;
    width: 10em;
    border-radius: 0 20px 20px 0;
    margin-left: -4px;
}

input#csv-file {
    /* text-align: center; */
    margin: 0 auto 0 auto;
    border-radius: 20px;
    height: 2.6em;
    width: 420px;
}


a#copyRightButton {
    overflow: hidden;
}

/*custom cs*/
/*#close, #loadDataclose{
    margin: 5px;
}*/

.popupWindow, 
.modal-backdrop{
    background-color: rgba(0, 0, 0, 0.30);
}

#welcomeContainer .col-sm-4 {
    width: 33.33333333%;
    float: left;
}

.popupWindow div.col-centered{
    background-color: #ffffff;
    opacity: 1;
    z-index: 1000;
    width: 50%;
    height: 80%;
    margin-left: auto;
    margin-right: auto;
    max-height: 700px; 
    min-height: 530px;
    min-width: 560px;
    padding: 2em;
    
}

#ScChartWrapper {
    background-color: white;
}

#ScChartWrapper.rightChartFullScreenToggled{
    width: 75%;
    left: 15px;
    z-index: 9;
    position: absolute;
}

.col-lg-3 .chartSide.rightChartFullScreenToggled, 
.col-lg-3 .row-fluid.rightChartFullScreenToggled{
    width: 100%;
    float: left;
}
#zoomedArea.rightChartFullScreenToggled{
    display: none;
    z-index: 1;
}
#PcChartWrapper.rightChartFullScreenToggled{
    position: absolute;
}
#thumbnails-btm_container.rightChartFullScreenToggled{
    width: 25%;
    height: calc(100% - 70px);
}

.col-lg-3 #copyRightButton.rightChartFullScreenToggled{
    width: 85% !important;
}

g.cell text {
    font-size: 0.85em;
}
#folderLink{
    border-radius: 20px 0 0 20px;
    width: 300px;
    height: 2.2em;
}

#dimSettingList{
    overflow-y: auto;
    height: 62%;
}

#dimSettingList .form-control{
    min-width: 50px;
    width: 35%;
    margin-left: 0.5em;
}


#showStaticLink{
    opacity: 0;
}

#showStaticLink.Show{
    opacity: 1;
    margin-top: 50px;
}

#graph svg g.mark line{
    stroke-width: 4px;
}

#navbar-studyInfo{
    position: absolute;
    right: 50px;
    text-align: right;
}

#vis .imgSwitch select{
    width: 100%;
    margin-top: 10px;
}

#vis .imgSwitch{
    float: right;
}



#tbContainer { padding-left: 60px;}
/* .row, .header {clear: left;font-size: 12px;line-height: 18px;height: 18px;} */
#tbContainer .row:nth-child(odd) { background: rgba(0,0,0,0.03); }
#tbContainer .header {
    font-weight: bold;
    display: table;
    margin-right: -15px;
    margin-left: -15px;
}
/*
.cell { float: left; overflow: hidden; white-space: nowrap; width: 100px; height: 18px; }
*/
.cell{ 
  float:left;
  /* border: 1px solid transparent;
  border-right: 1px dotted silver;
  border-bottom-color: silver; */
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: middle;
  width: 100px; 
  /* height: 18px; */
  padding: 1px 2px 2px 1px;
  margin: 0;
  white-space: nowrap;
  cursor: default;
}
#tbContainer .row:hover {
  background: lightskyblue;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}

.col-0 { width: 180px; }

